src/app/[locale]/settings-profile/SettingsForm/SettingsForm.module.scss
.form {
  padding-top: 24px;
  width: 494px;
  position: relative;

  &__label {
    display: block;
    color: var(--light-900, #8d9094);
    font-size: 14px;
    font-weight: 400;
    line-height: 24px;
  }

  &__lastName {
  }

  &__textInput {
    width: 100%;
    background: transparent;
    outline: none;
    border-radius: 2px;
    border: 1px solid var(--dark-100, #4c4c4c);
    padding: 6px 12px;
    margin-bottom: 24px;
    transition: all 0.2s linear;

    &:focus {
      border: 1px solid var(--primary-500);
    }

    &__error {
      width: 100%;
      background: transparent;
      outline: none;
      border-radius: 2px;
      padding: 6px 12px;
      margin-bottom: 24px;
      transition: all 0.2s linear;
      border: 1px solid red;
    }
  }

  &__textarea {
    resize: none;
    width: 100%;
    border-radius: 2px;
    border: 1px solid var(--dark-100, #4c4c4c);
    background: var(--dark-500, #171717);
    min-height: 84px;
    padding: 5px;
    color: var(--light-900, #8d9094);
    font-size: 16px;
    font-weight: 400;
    outline: none;
    transition: all 0.2s linear;

    &:focus {
      border: 1px solid var(--primary-500);
    }

    &__error {
      resize: none;
      width: 100%;
      border-radius: 2px;
      border: 1px solid red;
      background: var(--dark-500, #171717);
      min-height: 84px;
      padding: 5px;
      color: var(--light-900, #8d9094);
      font-size: 16px;
      font-weight: 400;
      outline: none;
      transition: all 0.2s linear;
    }
  }

  &__btn {
    position: absolute;
    bottom: -85px;
    right: 0;
  }

  &__error {
    color: red;
    position: absolute;
    bottom: 3px;
    left: 0;
    font-size: 12px;
  }

  &__textareaError {
    color: red;
    position: absolute;
    bottom: -15px;
    left: 0;
    font-size: 12px;
  }

  &__itemWrapper {
    position: relative;
  }
}

